# genereviews-link

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SECURITY.md  bench_ranking_results.json  c_alpha_hnsw_plans.json  container-release.json  mcp_server.py  mypy.ini  pyproject.toml  server.py
.claude/skills/ci-failure-triage/: SKILL.md
.claude/skills/fastapi-route-change/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-corpus.yml  ci.yml  conformance.yml  container-ci.yml  container-release.yml  container-security.yml  corpus-data-release.yml  docker.yml  release.yml  security.yml  verify-corpus-bundle.yml
.planning/: 2026-05-25-senior-engineering-review.md
docker/: Dockerfile  README.md  ci-prepare-smoke.sh  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.override.gr-pg.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: CHANGELOG.md  architecture.md  configuration.md  data.md  deployment.md
docs/superpowers/: README.md
genereview_link/: __init__.py  cli.py  config.py  download_guard.py  http_security.py  logging_config.py  server_lifecycle.py  server_manager.py
genereview_link/api/: __init__.py  client_manager.py  diagnostics.py  errors.py  eutils_client.py  orchestration.py  orchestration_errors.py  untrusted_limits.py
genereview_link/corpus/: __init__.py  archive.py  bundle.py  bundle_metadata.py  bundle_validation.py  canonicalize.py  chunking.py  nxml.py  nxml_render.py  parallel.py  passage_role.py  pipeline.py  records.py  sidedata.py  tables.py  tokenizer.py
genereview_link/db/: __init__.py  identifiers.py  migrate.py  pool.py  restore.py
genereview_link/ingest/: __init__.py  github_release.py  orchestrator.py  scheduler.py
genereview_link/mcp/: __init__.py  annotations.py  envelope.py  error_passthrough.py  notfound_guard.py  prompts.py  untrusted_content.py
genereview_link/middleware/: __init__.py  logging_middleware.py
genereview_link/models/: __init__.py  genereview_models.py  sections.py  staleness.py
genereview_link/retrieval/: __init__.py  embeddings.py  lexical.py  model_identity.py  repository.py  rerank.py
genereview_link/services/: __init__.py  errors.py  gene_index.py  genereview_service.py  service_manager.py
scripts/: bench_ranking.py  build_bench_worklist.py  check_file_size.py  generate_ranking_bench.py  measure_dense_filter_plans.py  refresh_chapter_metadata_dates.py  validate_ranking_bench.py  verify_torch_cuda.py
tests/: __init__.py  conftest.py  test_api_diagnostics.py  test_api_errors.py  test_api_integration.py  test_api_request_validation.py  test_bootstrap_live_migration.py  test_chapter_empty_section_next_commands.py  test_chapters_section_route.py  test_cli.py  test_cli_serve.py  test_config_database.py  test_correlation_id.py  test_cors_credentials.py  test_coverage_boost.py  test_docker_compose_config.py  test_docker_compose_loopback.py  test_end_to_end.py  test_eutils_client_mocked.py  test_eutils_scrape_error_sever.py  test_genereview_fulltext_guardrail.py  test_genereview_service.py  test_github_actions_pinning.py  test_license_route.py  test_logging_correlation.py  test_logging_perf.py  test_mcp_envelope_error_unit.py  test_mcp_envelope_unit.py  test_mcp_error_passthrough.py  test_mcp_license_resource.py  test_mcp_response_envelope.py  test_mcp_search_passages_params.py  test_mcp_structured_errors.py  test_mcp_tool_dispatch.py  test_mcp_usage_resource.py  test_metrics.py  test_no_pii_in_logs.py  test_passage_detail_model.py  test_primary_gene_role_integration.py  test_ranking_filter_scope.py  (+16 more)
tests/conformance/: test_contract_truth_v1.py
tests/eval/: baseline.json  genereviews_queries.jsonl  run_eval.py
tests/fixtures/: NBK1247_BRCA1.html  NBK1311_Huntington.html  labeled_passages.jsonl  mcp_initialize.json  ranking_baseline.json  ranking_bench.jsonl  ranking_bench_generation_prompt.md  ranking_bench_worklist.json
tests/integration/: conftest.py  test_bundle_round_trip.py  test_embedding_backfill.py  test_ingest_end_to_end.py  test_migrations.py  test_pool.py  test_pool_search_path_survives_reset.py  test_repository_chapters.py  test_repository_dense.py  test_repository_get_passage.py  test_repository_lexical.py  test_repository_metadata.py  test_repository_metadata_tables.py  test_repository_search_snippet.py  test_repository_section_filter.py  test_repository_section_order.py  test_repository_smoke.py  test_repository_table.py  test_repository_window.py  test_scheduler_advisory_lock.py
tests/smoke/: measure_latency.sh  phase_10_lossless_chunker.sh  phase_11_score_visibility.sh  phase_12_ranking_regression.sh  phase_5.sh  phase_6.sh  phase_7_post_rebuild.sh  phase_8.sh  phase_9.sh
tests/unit/: test_api_passages_dual_query.py  test_api_passages_search_heading_path.py  test_bootstrap_tarfile_security.py  test_brief_snippet_fallback.py  test_bundle_download_authenticity.py  test_clean_content_unicode.py  test_corpus_archive.py  test_corpus_bundle.py  test_corpus_bundle_metadata.py  test_corpus_bundle_validation.py  test_corpus_canonicalize.py  test_corpus_chunking.py  test_corpus_ingest_ceilings.py  test_corpus_nxml.py  test_corpus_nxml_last_updated.py  test_corpus_nxml_lossless.py  test_corpus_nxml_tables.py  test_corpus_parallel_audit.py  test_corpus_parallel_copy.py  test_corpus_records.py  test_corpus_restore_policy.py  test_corpus_role_classifier.py  test_corpus_sidedata.py  test_corpus_tables.py  test_corpus_text_normalization.py  test_corpus_tokenizer.py  test_dockerfile_bootstrap.py  test_dockerfile_healthcheck.py  test_eutils_client_references.py  test_genereview_service_cache_ttl.py  test_github_release.py  test_health_transport_fields.py  test_host_origin_guard.py  test_mcp_tool_surface.py  test_mcp_transport_guard.py  test_parallel_retrieval.py  test_pool_search_path.py  test_primary_gene_symbols.py  test_readme_tools.py  test_retrieval_adjusted_score.py  (+16 more)
(+117 files in other folders)
